--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <script type="text/javascript" src="script.js"></script>
 </head>
 <body>
-    <input type="button" id="filter" value="Filter" onclick="Filter()" />
-    <hr />
-    <div id="tableDiv">
-    </div>
+    <input type="button" id="filter" value="Filter" onclick="FilterFunc()" />
+    <div id="tableDiv"></div>
 </body>
 </html>
