With persist and rest

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <input type="button" id="filter" value="Filter" onclick="FilterFunc()" />
+    <input type="button" id="reset" value="Reset" onclick="ResetFunc()" />
     <div id="tableDiv"></div>
 </body>
 </html>
